# internal/types/reqRespModels.go
@@ -1,5 +1,0 @@
-package types
-
-type OrderReqBody struct {
-	Products []Product `json:"products"`
-}
